# cpp-boilerplate

./: CMakeLists.txt  Dockerfile  README.md
app/: main.cpp
include/: foo.h
tests/: CMakeLists.txt  test_foo.cpp  tests.cpp
tests/include/: mock_foo.h
